// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/popup/demo/basic.md correctly 1`] = `
<div
  class="m-example-popup-wrapper"
>
  <button
    class="m-button m-button-primary"
    style="margin-bottom:10px"
    type="button"
  >
    <div
      class="m-button-inner"
    >
      <span>
        屏幕中弹出
      </span>
    </div>
  </button>
  <div
    class="m-popup m-popup-center"
  >
    <div
      class="m-popup-mask"
      style="display:none"
    />
    <div
      class="m-popup-box"
      style="display:none"
    >
      <div
        class="m-example-popup m-example-popup-center"
      >
        Popup Center
      </div>
    </div>
  </div>
  <button
    class="m-button m-button-primary"
    style="margin-bottom:10px"
    type="button"
  >
    <div
      class="m-button-inner"
    >
      <span>
        底部弹出
      </span>
    </div>
  </button>
  <div
    class="m-popup m-popup-bottom"
  >
    <div
      class="m-popup-mask"
      style="display:none"
    />
    <div
      class="m-popup-box"
      style="display:none"
    >
      <div
        class="m-popup-title-bar"
      >
        <div
          class="m-popup-title-bar-left"
        >
          cancel
        </div>
        <div
          class="m-popup-title-bar-center"
        >
          <div
            class="m-popup-title-bar-title"
          >
            Popup Title
          </div>
          <div
            class="m-popup-title-bar-describe"
          >
            Popup Description
          </div>
        </div>
        <div
          class="m-popup-title-bar-right"
        >
          ok
        </div>
      </div>
      <div
        class="m-example-popup m-example-popup-bottom"
      >
        Popup Bottom
      </div>
    </div>
  </div>
  <button
    class="m-button m-button-primary"
    style="margin-bottom:10px"
    type="button"
  >
    <div
      class="m-button-inner"
    >
      <span>
        顶部弹出
      </span>
    </div>
  </button>
  <div
    class="m-popup m-popup-top"
  >
    <div
      class="m-popup-mask"
      style="display:none"
    />
    <div
      class="m-popup-box"
      style="display:none"
    >
      <div
        class="m-example-popup m-example-popup-top"
      >
        Popup Top
      </div>
    </div>
  </div>
  <button
    class="m-button m-button-primary"
    style="margin-bottom:10px"
    type="button"
  >
    <div
      class="m-button-inner"
    >
      <span>
        左侧弹出
      </span>
    </div>
  </button>
  <div
    class="m-popup m-popup-left"
  >
    <div
      class="m-popup-mask"
      style="display:none"
    />
    <div
      class="m-popup-box"
      style="display:none"
    >
      <div
        class="m-example-popup m-example-popup-left"
      >
        Popup Left
      </div>
    </div>
  </div>
  <button
    class="m-button m-button-primary"
    style="margin-bottom:10px"
    type="button"
  >
    <div
      class="m-button-inner"
    >
      <span>
        右侧弹出
      </span>
    </div>
  </button>
  <div
    class="m-popup m-popup-right"
  >
    <div
      class="m-popup-mask"
      style="display:none"
    />
    <div
      class="m-popup-box"
      style="display:none"
    >
      <div
        class="m-example-popup m-example-popup-right"
      >
        Popup Right
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/popup/demo/other.md correctly 1`] = `
<div
  class="m-example-popup-wrapper"
>
  <button
    class="m-button m-button-primary"
    style="margin-bottom:10px"
    type="button"
  >
    <div
      class="m-button-inner"
    >
      <span>
        无遮罩层
      </span>
    </div>
  </button>
  <div
    class="m-popup m-popup-top"
  >
    <div
      class="m-popup-box"
      style="display:none"
    >
      <div
        class="m-example-popup m-example-popup-top"
      >
        Popup Top
      </div>
    </div>
  </div>
  <button
    class="m-button m-button-primary"
    style="margin-bottom:10px"
    type="button"
  >
    <div
      class="m-button-inner"
    >
      <span>
        禁用遮罩层点击
      </span>
    </div>
  </button>
  <div
    class="m-popup m-popup-bottom"
  >
    <div
      class="m-popup-mask"
      style="display:none"
    />
    <div
      class="m-popup-box"
      style="display:none"
    >
      <div
        class="m-popup-title-bar"
      >
        <div
          class="m-popup-title-bar-left"
        >
          <i
            class="m-icon m-icon-close-circle-o"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="close-circle-o"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M717.2 306.2c-14.1-14-36.9-14-50.9.1L512 461 357.7 306.3c-14-14.1-36.8-14.1-50.9-.1-14.1 14-14.1 36.8-.1 50.9L461.2 512 306.7 666.9c-14 14.1-14 36.9.1 50.9 7 7 16.2 10.5 25.4 10.5s18.5-3.5 25.5-10.6L512 563l154.3 154.8c7 7.1 16.3 10.6 25.5 10.6s18.4-3.5 25.4-10.5c14.1-14 14.1-36.8.1-50.9L562.8 512l154.4-154.9c14.1-14.1 14.1-36.9 0-50.9z"
              />
              <path
                d="M512 0C229.2 0 0 229.2 0 512s229.2 512 512 512 512-229.2 512-512S794.8 0 512 0zm311.1 823.1c-40.4 40.4-87.5 72.2-139.9 94.3C629 940.4 571.4 952 512 952c-59.4 0-117-11.6-171.2-34.5-52.4-22.2-99.4-53.9-139.9-94.3-40.4-40.4-72.2-87.5-94.3-139.9C83.6 629 72 571.4 72 512c0-59.4 11.6-117 34.5-171.2 22.2-52.4 53.9-99.4 94.3-139.9 40.4-40.4 87.5-72.2 139.9-94.3C395 83.6 452.6 72 512 72c59.4 0 117 11.6 171.2 34.5 52.4 22.2 99.4 53.9 139.9 94.3 40.4 40.4 72.2 87.5 94.3 139.9C940.4 395 952 452.6 952 512c0 59.4-11.6 117-34.5 171.2-22.2 52.4-53.9 99.5-94.4 139.9z"
              />
            </svg>
          </i>
        </div>
        <div
          class="m-popup-title-bar-center"
        >
          <div
            class="m-popup-title-bar-title"
          >
            禁用遮罩层点击
          </div>
          <div
            class="m-popup-title-bar-describe"
          />
        </div>
        <div
          class="m-popup-title-bar-right"
        />
      </div>
      <div
        class="m-example-popup m-example-popup-mask"
      >
        Popup Bottom
      </div>
    </div>
  </div>
  <button
    class="m-button m-button-primary"
    style="margin-bottom:10px"
    type="button"
  >
    <div
      class="m-button-inner"
    >
      <span>
        防止滚动穿透
      </span>
    </div>
  </button>
  <div
    class="m-popup m-popup-bottom"
  >
    <div
      class="m-popup-mask"
      style="display:none"
    />
    <div
      class="m-popup-box"
      style="display:none"
    >
      <div
        class="m-popup-title-bar"
      >
        <div
          class="m-popup-title-bar-left"
        >
          关闭
        </div>
        <div
          class="m-popup-title-bar-center"
        >
          <div
            class="m-popup-title-bar-title"
          >
            防止滚动穿透
          </div>
          <div
            class="m-popup-title-bar-describe"
          />
        </div>
        <div
          class="m-popup-title-bar-right"
        />
      </div>
      <div
        class="m-example-popup m-example-popup-scroll"
      >
        <div>
          Popup Bottom
        </div>
        <div>
          Popup Bottom
        </div>
        <div>
          Popup Bottom
        </div>
        <div>
          Popup Bottom
        </div>
        <div>
          Popup Bottom
        </div>
        <div>
          Popup Bottom
        </div>
        <div>
          Popup Bottom
        </div>
        <div>
          Popup Bottom
        </div>
        <div>
          Popup Bottom
        </div>
        <div>
          Popup Bottom
        </div>
      </div>
    </div>
  </div>
</div>
`;
